[project]
name = "sample-uv-service"
version = "0.1.0"
description = "A sample Python service using uv without a committed lock file"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pydantic==2.7.1",
    "httpx==0.27.0",
    "sqlalchemy==2.0.30",
    "alembic==1.13.1",
    "redis==5.0.4",
    "structlog==24.1.0",
    # unpinned / ranged — should be filtered out
    "boto3>=1.26.0",
    "click~=8.1",
    "requests",
]

[dependency-groups]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.7",
    "ruff==0.4.4",
    "mypy==1.10.0",
]

[tool.uv]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
